...
                                <color key="backgroundColor" red="0.91764705882352937" green="0.13333333333333333" blue="0.17647058823529413" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="48" id="OGi-WV-Coy"/>
                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="100" id="r6w-2S-A0h"/>
                                </constraints>
                                <fontDescription key="fontDescription" name="HelveticaNeue-Bold" family="Helvetica Neue" pointSize="24"/>
                                <state key="normal" title="Start">
                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                </state>
                                <userDefinedRuntimeAttributes>
                                    <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
                                        <real key="value" value="8"/>
                                    </userDefinedRuntimeAttribute>
...
                            <constraint firstItem="QaM-ad-ug4" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="bvF-Wh-MYq"/>
                            <constraint firstItem="QxE-3B-5dt" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="qAa-cg-Zj9"/>
                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="QaM-ad-ug4" secondAttribute="trailing" constant="16" id="ro9-L7-Cfe"/>
                        </constraints>
                        <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                    </view>
                    <navigationItem key="navigationItem" title="Welcome" id="lep-1n-ihd"/>
                    <connections>
                        <outlet property="marvelView" destination="QaM-ad-ug4" id="QFX-2P-anf"/>
                        <outlet property="startButton" destination="QxE-3B-5dt" id="C3e-7q-xv1"/>
                    </connections>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="887.20000000000005" y="27.436281859070466"/>
        </scene>
        <!--Heroes-->
        <scene sceneID="vQ5-HW-RjM">
            <objects>
                <viewController title="Heroes" id="AlT-E2-1Ni" customClass="HeroesViewController" customModule="MarvelApp" customModuleProvider="target" sceneMemberID="viewController">
                    <view key="view" contentMode="scaleToFill" id="2ys-AD-4xX">
                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <collectionView multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="c4v-QI-ozB">
                                <rect key="frame" x="16" y="96" width="343" height="539"/>
...
            </objects>
            <point key="canvasLocation" x="1748" y="26.53673163418291"/>
        </scene>
        <!--Details-->
        <scene sceneID="tXS-Si-QFb">
            <objects>
                <viewController title="Details" id="6jz-HI-bec" customClass="DetailsViewController" customModule="MarvelApp" customModuleProvider="target" sceneMemberID="viewController">
                    <view key="view" contentMode="scaleToFill" id="kta-Ft-1QG">
                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="marvel_logo" translatesAutoresizingMaskIntoConstraints="NO" id="PDx-zJ-mld">
                                <rect key="frame" x="16" y="80" width="343" height="200"/>
...
